[gd_scene load_steps=6 format=3 uid="uid://1gsceak3jlnh"]

[ext_resource type="Script" uid="uid://b6b8tdn2ryva7" path="res://player/Player.gd" id="1"]
[ext_resource type="Script" uid="uid://2qvqwd7ex1g8" path="res://components/HealthComponent.gd" id="2"]
[ext_resource type="Script" uid="uid://cjvjv2sul7d0n" path="res://components/WeaponComponent.gd" id="3"]
[ext_resource type="Script" uid="uid://casxedamth3ji" path="res://components/MovementComponent.gd" id="4"]

[sub_resource type="CircleShape2D" id="1"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Visual" type="Polygon2D" parent="."]
color = Color(0, 0.5, 1, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")
max_health = 5

[node name="WeaponComponent" type="Node" parent="."]
script = ExtResource("3")
fire_rate = 0.15

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4")
speed = 250.0
